<resources>
    <string name="app_name">RoomRxJavaKotlinDemo</string>

    <string name="last_name">Apellido</string>
    <string name="first_name">Nombre</string>
    <string name="birthday">Fecha de nacimiento</string>
    <string name="address">Dirección</string>
    <string name="email">Email</string>
    <string name="phone">Teléfono</string>
    <string name="commment">Comentario</string>

    <string name="customer_app">Clientes</string>
    <string name="add_customer">Agregar cliente</string>
    <string name="see_customer_list">Listado de clientes</string>
    <string name="no_customers">No hay clientes registrados</string>

    <string name="save">Guardar</string>
    <string name="edit">Editar</string>
    <string name="delete">Eliminar</string>
</resources>
