<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollFeed"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.appsnipp.formdesigns.MainActivity"
        tools:showIn="@layout/activity_main"
        android:focusableInTouchMode="true">

        <androidx.cardview.widget.CardView
            android:id="@+id/personalDetailsCard"
            style="@style/centreLocatorCardDesign"
            android:background="@drawable/container_rounded"
            android:layout_margin="20dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:focusableInTouchMode="false"
                android:orientation="vertical"
                android:padding="20dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/txtLastName"
                        style="@style/modifiedEditText"
                        android:hint="@string/last_name"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/txtFirstName"
                        style="@style/modifiedEditText"
                        android:hint="@string/first_name"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/txtAddress"
                        style="@style/modifiedEditText"
                        android:ems="10"
                        android:hint="@string/address"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/txtEmail"
                        style="@style/modifiedEditText"
                        android:ems="10"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/txtPhone"
                        style="@style/modifiedEditText"
                        android:hint="@string/phone"
                        android:inputType="phone" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputComment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/txtComment"
                        style="@style/modifiedEditText"
                        android:hint="@string/commment"
                        android:inputType="textMultiLine"
                        android:minLines="2" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/container_rounded_colored"
                    android:text="@string/save"
                    android:textColor="@color/colorAccent" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>